test: integration test for downloading excel file and convert to csv